// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vdc22r=""
  >
    default Badge
  </div>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-18uz01l=""
  >
    stroke Badge
  </div>
</div>
`;

exports[`Storyshots color blue default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1d3h730=""
  >
    blue default Badge
  </div>
</div>
`;

exports[`Storyshots color blue stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1nf2brk=""
  >
    blue stroke Badge
  </div>
</div>
`;

exports[`Storyshots color gray default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vdc22r=""
  >
    gray default Badge
  </div>
</div>
`;

exports[`Storyshots color gray stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-18uz01l=""
  >
    gray stroke Badge
  </div>
</div>
`;

exports[`Storyshots color green default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-jh132n=""
  >
    green default Badge
  </div>
</div>
`;

exports[`Storyshots color green stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1ijjyd4=""
  >
    green stroke Badge
  </div>
</div>
`;

exports[`Storyshots color red default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-17te2fi=""
  >
    red default Badge
  </div>
</div>
`;

exports[`Storyshots color red stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1en6ax5=""
  >
    red stroke Badge
  </div>
</div>
`;

exports[`Storyshots color yellow default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1q8b1lc=""
  >
    yellow default Badge
  </div>
</div>
`;

exports[`Storyshots color yellow stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-10iae72=""
  >
    yellow stroke Badge
  </div>
</div>
`;
